# stairCASE

./: .gitignore  README.md
architecture/: architecture.graffle  ma-architecture.tex
architecture/coq/: .gitignore  APDT.v  ApdtProps.v  Architecture.v  architecture.v
architecture/doc/: ma-architecture.tex
examples/CakeML/: README.md
examples/CakeML/apdt/: Makefile  apdt.sml
examples/CakeML/cake-x64/: Makefile
examples/CakeML/wordcount/: Makefile  readFile.txt  wordcount.sml
examples/compcert/VST2/: README.md  progs
examples/compcert/VST2/baseExp/: verif_exp3.v
examples/compcert/VST2/exp1/: exp1.c  exp1.glob  exp1.v  exp1.vo  verif_exp1.v
examples/compcert/VST2/exp2/: exp2.c  exp2.glob  exp2.v  exp2.vo  verif_exp2.v
examples/compcert/VST2/exp3/: exp3.c  exp3.glob  exp3.v  exp3.vo  verif_exp3.v
examples/compcert/VST2/exp4/: exp4.c  exp4.glob  exp4.v  exp4.vo  verif_exp4.v
examples/compcert/VST2/exp5/: .exp4.c.swp  exp5.c  exp5.glob  exp5.v  exp5.vo  verif_exp5.v
examples/compcert/VST3/: README.md  integers.v
examples/compcert/VST3/baseExp/: exp0.c  exp0.glob  exp0.v  exp0.vo  verif_exp0.v
examples/compcert/cryptohash/: sha256.c
examples/compcert/cryptohash/myopenssl/: sha256.c
examples/compcert/cryptohash/old/: README.md
examples/compcert/cryptohash/sha-2/: README.md  sha256.glob  sha256.v
examples/compcert/cryptohash/sha-2/try1/: sha256.vo  verif-sha256.v
examples/compcert/cryptohash/sha-2/try2/: hex.txt  hex2dec.py  output  verif-sha256.v  wherethestructsat
examples/compcert/experiment1/: README.md  exp1.c  exp1.glob  exp1.v  exp1.vo  verif_exp1.v
examples/compcert/firstVSTprogram/: README.md  overview.md
examples/compcert/firstVSTprogram/exp1/: #verif_exp1.v#  exp1.c  exp1.v  exp1.vo  verif_sumarray.v
examples/compcert/firstVSTprogram/exp2/: exp2.c  exp2.glob  exp2.v  exp2.vo  verif_exp2.v
examples/compcert/firstVSTprogram/exp3/: exp3.c  exp3.glob  exp3.v  exp3.vo
examples/compcert/firstVSTprogram/exp4/: #verif_sumarray.v#  _CoqProject  sumarray.glob  sumarray.v  sumarray.vo  verif_sumarray.v
examples/compcert/firstVSTprogram/exp4/original/: sumarray.v  sumarray.vo
examples/compcert/sig/: overview.md
examples/coq/: README.md
examples/hol/exp0/: README.md  test.sml  test.sml~
examples/seL4/: README.md
examples/seL4/cakeml_ffi/projects/test_app/: CMakeLists.txt
examples/seL4/cakeml_ffi/projects/test_app/src/: basis_ffi.c  fact.cml  main.c  util.c
examples/seL4/camkes_apdt/: default.xml
examples/seL4/camkes_apdt/projects/test_app/: CMakeLists.txt
examples/seL4/camkes_apdt/projects/test_app/apps/test_app/: CMakeLists.txt
examples/seL4/camkes_apdt/projects/test_app/apps/test_app/components/cakeml/: cakeml.camkes
examples/seL4/camkes_cakeml/: default.xml
examples/seL4/camkes_cakeml/projects/test_app/apps/test_app/: CMakeLists.txt  test_app.camkes
examples/seL4/camkes_cakeml/projects/test_app/apps/test_app/components/cakeml/src/: basis_ffi.c  fact.cml  main.c
examples/seL4/compcert_poc/: default.xml
examples/seL4/compcert_poc/projects/test_app/: CMakeLists.txt
examples/seL4/compcert_poc/projects/test_app/src/: main.c
examples/seL4/test_app/: CMakeLists.txt  init-build
examples/seL4/test_app/projects/test_app/: CMakeLists.txt
examples/seL4/test_app/projects/test_app/src/: main.c
vm_attest/: .README.md.swp  CMakeLists.txt  README.md  settings.cmake  vm_attest.camkes  vm_echo_ping.camkes
vm_attest/components/CakeAM/: cakeam.c  server.cml
vm_attest/components/ComponentAM/: attestation_manager.c
vm_attest/components/Flagger/: flagger.c
vm_attest/components/KeyManager/: .key_manager.c.swp  key_manager.c
vm_attest/components/PingClient/: .ping_client.c.swp  ping_client.c
vm_attest/exynos5422/: devices.camkes
